deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-web-app
  template:
    metadata:
      labels:
        app: simple-web-app
    spec:
      containers:
      - name: web-container
        # Thay thế bằng tên image đã được build (hoặc sẽ được build)
        image: image-registry.openshift-image-registry.svc:5000/my-gitops-project/simple-web-app:latest
        ports:
        - containerPort: 8080
