service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-web-app-service
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: simple-web-app
